<resources>
    <string name="app_name">H30Fenrir</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="search">検索</string>
    <string name="address">住所</string>
    <string name="tel">電話番号</string>
    <string name="opentime">営業時間</string>
    <string name="howGo">行き方</string>
    <string name="rangeJa">検索範囲:徒歩</string>
    //1分で80m進む計算(M分=Xm/80):小数点第一四捨五入
    <string name="M300">4分</string>
    <string name="M1000">13分</string>
    <string name="M500">6分</string>
    <string name="M2000">25分</string>
    <string name="M3000">38分</string>
    <string name="m300">300m</string>
    <string name="m1000">1000m</string>
    <string name="m500">500m</string>
    <string name="m2000">2000m</string>
    <string name="m3000">3000m</string>
    <string name="name">店名(カナ)</string>
    <string name="backHome">検索画面に戻る</string>
    <string name="nextPage">次のページ</string>
    <string name="backPage">前のページ</string>
    <string name="changeImg">画像を切り替える</string>
    <string name="back">戻る</string>
    <string name="genre">ジャンル</string>
    <string name="freewordHint">キーワード(入力しなくても可)</string>
    <string name="pageHint">1ページの表示量(入力しなくても可)</string>
    <string name="shopimg">shopImg</string>
    <string name="resultPageNum">検索結果表示数</string>
    <string name="web">web</string>
    <string name="share">share</string>
    <string name="pageDefault">20</string>
    <string name="searchAlpha">絞り込み:</string>
    <string name="holiday">休日</string>
    <string name="imgSwich">imgSwich</string>
    <string name="wi_fi">Wi-Fiと位置情報の許可をしてください!!</string>
    <string name="pr">紹介文</string>
    <string-array name="mainArray">
        <item>料理・ジャンル</item>
        <item>和食</item>
        <item>洋食</item>
        <item>アジア料理</item>
    </string-array>
    <string-array name="listArray">
        <item>さらに絞り込み</item>
        <item>開店中</item>
        <item>昼営業あり</item>
        <item>夜営業あり</item>
    </string-array>

</resources>
