<?xml version="1.0" encoding="utf-8"?><!--src:https://akira-watson.com/android/scrollview.html-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="right"
            tools:text="店名"
            android:textIsSelectable="true"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/nameKana_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            tools:text="テンメイ"
            android:textIsSelectable="true"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/genre" />

        <TextView
            android:id="@+id/genre_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            tools:text="@string/genre"
            android:textIsSelectable="true"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/address_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            tools:text="@string/address"
            android:textIsSelectable="true"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/tel" />

        <TextView
            android:id="@+id/tel_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            tools:text="@string/tel"
            android:gravity="right"
            android:textIsSelectable="true"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/opentime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/opentime" />

        <TextView
            android:id="@+id/opentime_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            tools:text="@string/opentime"
            android:textIsSelectable="true"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/holiday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holiday" />

        <TextView
            android:id="@+id/holiday_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            tools:text="@string/holiday"
            android:textIsSelectable="true"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/howGo"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howGo" />
        <TextView
            android:id="@+id/howGo_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            tools:text="@string/howGo"
            android:textIsSelectable="true"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/shopimg"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_round" />

        <Button
            android:id="@+id/change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/changeImg" />
    </LinearLayout>

</ScrollView>